Initial dark theme css update

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <h2>Fin's Epic Website</h2>
       <i class="fa fa-bars hamburger-icon"></i>
       <nav>
-        <i class="fa fa-close close-icon"></i>
+        <div class="close-icon-wrapper">
+          <i class="fa fa-close close-icon"></i>
+        </div>
         <ul class="nav-list">
           <li class="nav-item">
             <a href="#">home</a>
