more responsive behaivour for larger screens + added dummy text at large scale

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <title>Fin Harris</title>
   </head>
   <body>
-    <header>
-      <h2>Fin's Epic Website</h2>
+    <header class="sticky-header">
+      <h2 class="title">Fin's Epic Website</h2>
       <i class="fa fa-bars hamburger-icon"></i>
       <nav>
         <div class="close-icon-wrapper">
@@ -32,6 +32,30 @@
         </ul>
       </nav>
     </header>
+    <section>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+      consequuntur repudiandae sed corporis fugit est, exercitationem tempora
+      incidunt eum quae quos quasi debitis fugiat consequatur minima cum
+      praesentium ea! Deserunt repellat similique expedita esse, provident
+      laboriosam aliquid pariatur, dicta incidunt impedit odio, officia
+      aspernatur tenetur corrupti nam facilis fuga quibusdam voluptatem ea
+      commodi quisquam laborum veritatis! Quae architecto praesentium, voluptas
+      recusandae temporibus error nemo dolorem accusamus quisquam consequatur
+      qui corporis rerum, quod placeat porro accusantium cum doloremque soluta
+      doloribus, animi aut reiciendis! Delectus eos nobis inventore voluptates
+      asperiores odio iure nisi necessitatibus eum molestias, sunt illo amet
+      sapiente deleniti deserunt repudiandae aut autem natus expedita ipsum
+      eaque nostrum aliquid nesciunt. Magni beatae unde harum recusandae quae
+      nisi nostrum explicabo quas commodi pariatur modi aliquam quis, quod
+      repudiandae earum ullam atque molestias architecto sit veritatis incidunt
+      voluptatum natus cum. Sapiente, temporibus? Quos quidem ad quasi id velit
+      quia libero eum debitis eveniet. Eum illo, sed reprehenderit, quas soluta
+      impedit aspernatur perferendis perspiciatis corrupti quam accusamus
+      architecto sint tempore obcaecati praesentium ratione repudiandae aut
+      ullam, rerum facere ipsam beatae quis. Ipsum quasi minima, cupiditate
+      tenetur, est laudantium officia voluptas non, veniam ullam sit saepe
+      accusamus consequatur quae quidem unde aperiam labore maxime.
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
