--- a/index.html
+++ b/index.html
@@ -32,29 +32,30 @@
         </ul>
       </nav>
     </header>
-    <section>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-      consequuntur repudiandae sed corporis fugit est, exercitationem tempora
-      incidunt eum quae quos quasi debitis fugiat consequatur minima cum
-      praesentium ea! Deserunt repellat similique expedita esse, provident
-      laboriosam aliquid pariatur, dicta incidunt impedit odio, officia
-      aspernatur tenetur corrupti nam facilis fuga quibusdam voluptatem ea
-      commodi quisquam laborum veritatis! Quae architecto praesentium, voluptas
-      recusandae temporibus error nemo dolorem accusamus quisquam consequatur
-      qui corporis rerum, quod placeat porro accusantium cum doloremque soluta
-      doloribus, animi aut reiciendis! Delectus eos nobis inventore voluptates
-      asperiores odio iure nisi necessitatibus eum molestias, sunt illo amet
-      sapiente deleniti deserunt repudiandae aut autem natus expedita ipsum
-      eaque nostrum aliquid nesciunt. Magni beatae unde harum recusandae quae
-      nisi nostrum explicabo quas commodi pariatur modi aliquam quis, quod
-      repudiandae earum ullam atque molestias architecto sit veritatis incidunt
-      voluptatum natus cum. Sapiente, temporibus? Quos quidem ad quasi id velit
-      quia libero eum debitis eveniet. Eum illo, sed reprehenderit, quas soluta
-      impedit aspernatur perferendis perspiciatis corrupti quam accusamus
-      architecto sint tempore obcaecati praesentium ratione repudiandae aut
-      ullam, rerum facere ipsam beatae quis. Ipsum quasi minima, cupiditate
-      tenetur, est laudantium officia voluptas non, veniam ullam sit saepe
-      accusamus consequatur quae quidem unde aperiam labore maxime.
+    <section class="landing">
+      <div class="top">
+        <h1 class="landing-header">YOU'VE LANDED!</h1>
+      </div>
+
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          class="waves"
+          fill="#0099ff"
+          fill-opacity="1"
+          d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,250.7C672,235,768,181,864,181.3C960,181,1056,235,1152,234.7C1248,235,1344,181,1392,154.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
+
+      <div class="bottom">
+        <section class="content">
+          <h2>Welcome to my personal page.</h2>
+          <p class="greeting">
+            Here you can test and use all my web based projects, and find links
+            to others.
+          </p>
+          <button class="temp">OPEN</button>
+        </section>
+      </div>
     </section>
     <script src="app.js"></script>
   </body>
