--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="main.css" />
     <title>Fin Harris</title>
   </head>
   <body>
@@ -24,10 +25,10 @@
             <a href="#">home</a>
           </li>
           <li class="nav-item">
-            <a href="#">contact</a>
+            <a href="./projects">projects</a>
           </li>
           <li class="nav-item">
-            <a href="#">support</a>
+            <a href="#">about</a>
           </li>
         </ul>
       </nav>
@@ -37,24 +38,23 @@
         <h1 class="landing-header">YOU'VE LANDED!</h1>
       </div>
 
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          class="waves"
-          fill="#0099ff"
-          fill-opacity="1"
-          d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,250.7C672,235,768,181,864,181.3C960,181,1056,235,1152,234.7C1248,235,1344,181,1392,154.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
-      </svg>
-
       <div class="bottom">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path
+            fill="#0099ff"
+            class="waves"
+            fill-opacity="1"
+            d="M0,192L48,165.3C96,139,192,85,288,69.3C384,53,480,75,576,122.7C672,171,768,245,864,256C960,267,1056,213,1152,176C1248,139,1344,117,1392,106.7L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"
+          ></path>
+        </svg>
         <section class="content">
           <h2>Welcome to my personal page.</h2>
           <p class="greeting">
             Here you can test and use all my web based projects, and find links
             to others.
           </p>
-          <button class="temp">OPEN</button>
         </section>
+        <button class="projects-call-to-action">Projects</button>
       </div>
     </section>
     <script src="app.js"></script>
