fixed call to action positioning on landing and added about template page

--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="../main.css" />
-    <title>Fin Harris | Projects</title>
+    <title>Fin Harris | About</title>
   </head>
   <body>
     <header class="sticky-header">
@@ -25,10 +25,10 @@
             <a href="../">home</a>
           </li>
           <li class="nav-item">
-            <a href="#">projects</a>
+            <a href="../projects/">projects</a>
           </li>
           <li class="nav-item">
-            <a href="../about/">about</a>
+            <a href="#">about</a>
           </li>
         </ul>
       </nav>
