--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="./projects">projects</a>
           </li>
           <li class="nav-item">
-            <a href="#">about</a>
+            <a href="./about/">about</a>
           </li>
         </ul>
       </nav>
@@ -47,14 +47,18 @@
             d="M0,192L48,165.3C96,139,192,85,288,69.3C384,53,480,75,576,122.7C672,171,768,245,864,256C960,267,1056,213,1152,176C1248,139,1344,117,1392,106.7L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"
           ></path>
         </svg>
-        <section class="content">
-          <h2>Welcome to my personal page.</h2>
-          <p class="greeting">
-            Here you can test and use all my web based projects, and find links
-            to others.
-          </p>
-        </section>
-        <button class="projects-call-to-action">Projects</button>
+        <div class="bottom-flex-wrapper">
+          <section class="content">
+            <h2>Welcome to my personal page.</h2>
+            <p class="greeting">
+              Here you can test and use all my web based projects, and find
+              links to others.
+            </p>
+          </section>
+          <button class="projects-call-to-action">
+            <a href="./projects/">Projects</a>
+          </button>
+        </div>
       </div>
     </section>
     <script src="app.js"></script>
