added projects to ./projects/ and the page files to ./projects/pages
added some projects and their source files to the projects page. could do with some more styling and copy

--- a/projects/index.html
+++ b/projects/index.html
@@ -35,6 +35,22 @@
       </nav>
     </header>
 
+    <section class="content">
+      <h1 class="header">my projects</h1>
+
+      <ul>
+        <li><a target="_blank" href="./pages/changeChars/">change chars</a></li>
+        <li>
+          <a target="_blank" href="./pages/higherOrLower/">higher or lower</a>
+        </li>
+        <li>
+          <a target="_blank" href="./pages/searchEngine/">search engine</a>
+        </li>
+        <li><a target="_blank" href="./pages/weatherApp/">weather app</a></li>
+        <li><a target="_blank" href="./pages/youAreAdj/">you are...</a></li>
+      </ul>
+    </section>
+
     <script src="../app.js"></script>
   </body>
 </html>
