--- a/projects/index.html
+++ b/projects/index.html
@@ -47,6 +47,8 @@
           <a target="_blank" href="./pages/searchEngine/">search engine</a>
         </li>
         <li><a target="_blank" href="./pages/youAreAdj/">you are...</a></li>
+        <li><a target="_blank" href="./pages/wipLandingPage/">WIP 3D landing page demo</a></li>
+
       </ul>
     </section>
 
