created discord bot page

--- a/projects/index.html
+++ b/projects/index.html
@@ -48,6 +48,7 @@
         </li>
         <li><a target="_blank" href="./pages/weatherApp/">weather app</a></li>
         <li><a target="_blank" href="./pages/youAreAdj/">you are...</a></li>
+        <li><a target="_blank" href="./pages/discordBot/">discord bot</a></li>
       </ul>
     </section>
 
