fill out discord bot page

--- a/projects/pages/discordBot/index.html
+++ b/projects/pages/discordBot/index.html
@@ -6,9 +6,11 @@
     <title>Stringyy Bot | Discord</title>
   </head>
   <body>
-    <header>
+    <header class="header-shadow">
       <h1>Stringyy Bot Discord</h1>
-      <img src="./logo.jpg" alt="logo" />
+      <a href="https://discord.gg/aunMP6z" target="_blank" class="solid-logo">
+        <img src="./logo.jpg" alt="logo" />
+      </a>
     </header>
 
     <section class="maincontent">
@@ -22,7 +24,25 @@
           tailored to my needs.
         </p>
       </div>
+
+      <div class="commands">
+        <h2>Commands</h2>
+        <p>
+          StringyyBot is always developing and new commands are always being
+          added.
+        </p>
+        <ul>
+          <li>-oli : info about oliisozzer</li>
+          <li>-ping : ping the bot</li>
+          <li>-help : access help and info about the bot</li>
+        </ul>
+        <img src="./helpEmbed.png" alt="help embed" />
+      </div>
     </section>
+
+    <footer>
+      <p>Stringyy © 2021</p>
+    </footer>
 
     <script src="app.js"></script>
   </body>
