remove header shadow by default

--- a/projects/pages/discordBot/index.html
+++ b/projects/pages/discordBot/index.html
@@ -6,7 +6,7 @@
     <title>Stringyy Bot | Discord</title>
   </head>
   <body>
-    <header class="header-shadow">
+    <header>
       <h1>Stringyy Bot Discord</h1>
       <a href="https://discord.gg/aunMP6z" target="_blank" class="solid-logo">
         <img src="./logo.jpg" alt="logo" />
