--- a/projects/pages/discordBot/index.html
+++ b/projects/pages/discordBot/index.html
@@ -18,7 +18,7 @@
         <h2>About</h2>
         <p>
           StringyyBot is a bot that I created for use on my
-          <a href="https://discord.gg/aunMP6z">discord server</a>. It was
+          <a href="https://discord.gg/aunMP6z" target="_blank">discord server</a>. It was
           created by myself so that I can have custom commands that are
           individual to my server and so that I can create my own commands
           tailored to my needs.
