--- a/projects/pages/discordBot/index.html
+++ b/projects/pages/discordBot/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Open Graph Info -->
+    <meta property="og:title" content="Stringyy Bot" />
+    <meta property="og:site_name" content="Stringyy Bot" />
+    <meta
+      property="og:url"
+      content="https://finharris.github.io/projects/pages/discordBot/"
+    />
+    <meta
+      property="og:description"
+      content="StringyyBot is a bot that I created for use on my discord server. It was created by myself so that I can have custom commands that are individual to my server and so that I can create my own commands "
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://finharris.github.io/projects/pages/discordBot/logo.jpg"
+    />
+
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="main.css" />
     <title>Stringyy Bot | Discord</title>
@@ -18,9 +35,9 @@
         <h2>About</h2>
         <p>
           StringyyBot is a bot that I created for use on my
-          <a href="https://discord.gg/aunMP6z" target="_blank">discord server</a>. It was
-          created by myself so that I can have custom commands that are
-          individual to my server and so that I can create my own commands
+          <a href="https://discord.gg/aunMP6z" target="_blank">discord server</a
+          >. It was created by myself so that I can have custom commands that
+          are individual to my server and so that I can create my own commands
           tailored to my needs.
         </p>
       </div>
