created and added photography portfolio

--- a/projects/index.html
+++ b/projects/index.html
@@ -48,7 +48,16 @@
         </li>
         <li><a target="_blank" href="./pages/youAreAdj/">you are...</a></li>
         <li><a target="_blank" href="./pages/discordBot/">discord bot</a></li>
-        <li><a target="_blank" href="./pages/wipLandingPage/">WIP 3D landing page demo</a></li>
+        <li>
+          <a target="_blank" href="./pages/wipLandingPage/"
+            >WIP 3D landing page demo</a
+          >
+        </li>
+        <li>
+          <a target="_blank" href="./pages/portfolioPage/"
+            >photography portfolio</a
+          >
+        </li>
       </ul>
     </section>
 
