--- a/projects/pages/portfolioPage/pages/contact/index.html
+++ b/projects/pages/portfolioPage/pages/contact/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fin Harris | Contact</title>
     <link rel="stylesheet" href="../../styles/styles.css" />
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="../../assets/favicon.ico"
+      type="image/x-icon"
+    />
     <link
       href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css"
       rel="stylesheet"
