added animated underline to back to top button

--- a/projects/pages/portfolioPage/index.html
+++ b/projects/pages/portfolioPage/index.html
@@ -67,7 +67,7 @@
       <footer>
         <p>Fin Harris © 2021</p>
         <a href="../../../">Other Website</a>
-        <p class="back-to-top">back to top</p>
+        <p class="back-to-top animated-underline">back to top</p>
       </footer>
     </div>
 
