made images lower res for faster page loading. made images optionally resizable

--- a/projects/pages/portfolioPage/index.html
+++ b/projects/pages/portfolioPage/index.html
@@ -36,7 +36,7 @@
       <section class="page2">
         <h1 class="header">Horse yard</h1>
         <img
-          class="image"
+          class="image resizable-image"
           src="./assets/images/horseyard.jpg"
           alt="horse yard"
         />
@@ -45,7 +45,7 @@
       <section class="page3">
         <h1 class="header">Lady in the wind</h1>
         <img
-          class="image"
+          class="image resizable-image"
           src="./assets/images/grassyperson.jpg"
           alt="person with grass"
         />
@@ -54,7 +54,7 @@
       <section class="page4">
         <h1 class="header">The house</h1>
         <img
-          class="image"
+          class="image resizable-image"
           src="./assets/images/scotlandmansion.jpg"
           alt="large house"
         />
