--- a/projects/pages/portfolioPage/about/index.html
+++ b/projects/pages/portfolioPage/about/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fin Harris | Contact</title>
-    <link rel="stylesheet" href="../../styles/styles.css" />
+    <title>Fin Harris | About</title>
+    <link rel="stylesheet" href="../styles/styles.css" />
     <link
       rel="shortcut icon"
-      href="../../assets/favicon.ico"
+      href="../assets/favicon.ico"
       type="image/x-icon"
     />
     <link
@@ -23,13 +23,13 @@
         <i class="close ion-md-close"></i>
 
         <ul>
-          <li><a href="../../">portfolio</a></li>
-          <li><a href="../about/">about</a></li>
-          <li><a href="./">contact</a></li>
+          <li><a href="../">portfolio</a></li>
+          <li><a href="./">about</a></li>
+          <li><a href="../contact/">contact</a></li>
         </ul>
       </nav>
     </header>
   </body>
 
-  <script src="../../app.js"></script>
+  <script src="../app.js"></script>
 </html>
