--- a/projects/pages/portfolioPage/index.html
+++ b/projects/pages/portfolioPage/index.html
@@ -20,8 +20,8 @@
 
         <ul>
           <li><a href="./">portfolio</a></li>
-          <li><a href="./pages/about">about</a></li>
-          <li><a href="./pages/contact">contact</a></li>
+          <li><a href="./about">about</a></li>
+          <li><a href="./contact">contact</a></li>
         </ul>
       </nav>
     </header>
