setup beginning of changes to about me

--- a/projects/pages/portfolioPage/about/index.html
+++ b/projects/pages/portfolioPage/about/index.html
@@ -29,6 +29,10 @@
         </ul>
       </nav>
     </header>
+
+    <div class="container">
+      <h1 class="title">About Me</h1>
+    </div>
   </body>
 
   <script src="../app.js"></script>
