--- a/projects/pages/portfolioPage/about/index.html
+++ b/projects/pages/portfolioPage/about/index.html
@@ -15,6 +15,7 @@
       href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <header class="header-sect">
@@ -29,10 +30,6 @@
         </ul>
       </nav>
     </header>
-
-    <div class="container">
-      <h1 class="title">About Me</h1>
-    </div>
   </body>
 
   <script src="../app.js"></script>
