create about page and tweak css

--- a/projects/pages/portfolioPage/about/index.html
+++ b/projects/pages/portfolioPage/about/index.html
@@ -15,6 +15,8 @@
       href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <header class="header-sect">
@@ -31,7 +33,24 @@
     </header>
 
     <div class="container">
-      <h1 class="title">About Me</h1>
+      <section class="content">
+        <div class="text">
+          <div class="name">
+            <h1 class="full-name">Fin Harris</h1>
+            <h2 class="job-title">photographer</h2>
+          </div>
+          <p>
+            Hi, my name is Fin Harris and I am a photographer based in
+            Buckinghamshire, England. I photograph anything from events and
+            theatre shows to street life and landscapes.
+          </p>
+        </div>
+        <img
+          src="./assets/images/personalportrait.jpg"
+          alt="picture of myself"
+          class="portrait-image"
+        />
+      </section>
     </div>
   </body>
 
