--- a/projects/pages/portfolioPage/index.html
+++ b/projects/pages/portfolioPage/index.html
@@ -11,6 +11,8 @@
       href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="./stylesindex/styles.css" />
   </head>
   <body>
     <header class="header-sect">
