added more about me text and added responsive behaivour

--- a/projects/pages/portfolioPage/about/index.html
+++ b/projects/pages/portfolioPage/about/index.html
@@ -42,7 +42,9 @@
           <p>
             Hi, my name is Fin Harris and I am a photographer based in
             Buckinghamshire, England. I photograph anything from events and
-            theatre shows to street life and landscapes.
+            theatre shows to street life and landscapes. I really enjoy what I
+            do and I look forward to continuing to take awesome images for the
+            forseeable future.
           </p>
         </div>
         <img
