--- a/projects/pages/portfolioPage/about/index.html
+++ b/projects/pages/portfolioPage/about/index.html
@@ -44,7 +44,7 @@
             Buckinghamshire, England. I photograph anything from events and
             theatre shows to street life and landscapes. I really enjoy what I
             do and I look forward to continuing to take awesome images for the
-            forseeable future.
+            foreseeable future.
           </p>
         </div>
         <img
