added new images to portfolio page

--- a/projects/pages/portfolioPage/index.html
+++ b/projects/pages/portfolioPage/index.html
@@ -43,11 +43,11 @@
       </section>
 
       <section class="page3">
-        <h1 class="header">Lady in the wind</h1>
+        <h1 class="header">Munday Evening</h1>
         <img
           class="image resizable-image"
-          src="./assets/images/grassyperson.jpg"
-          alt="person with grass"
+          src="./assets/images/fullsize/mundayevening.jpg"
+          alt="sunny evening landscape with town in distance"
         />
       </section>
 
@@ -61,7 +61,12 @@
       </section>
 
       <section class="page5">
-        <h1 class="header">5</h1>
+        <h1 class="header">Glowing Horizon</h1>
+        <img
+          class="image resizable-image"
+          src="./assets/images/fullsize/glowinghorizon.jpg"
+          alt="night time landscape with town in distance"
+        />
       </section>
 
       <footer>
