changed about page copy

--- a/projects/pages/portfolioPage/about/index.html
+++ b/projects/pages/portfolioPage/about/index.html
@@ -40,11 +40,11 @@
             <h2 class="job-title">photographer</h2>
           </div>
           <p>
-            Hi, my name is Fin Harris and I am a photographer based in
-            Buckinghamshire, England. I photograph anything from events and
-            theatre shows to street life and landscapes. I really enjoy what I
-            do and I look forward to continuing to take awesome images for the
-            foreseeable future.
+            Hi, my name is Fin Harris and I am a photographer based in the South
+            East of England. I photograph anything from events and theatre shows
+            to street life and landscapes. I really enjoy what I do and I look
+            forward to continuing to take awesome images for the foreseeable
+            future.
           </p>
         </div>
         <img
