changed images on portfolio

--- a/projects/pages/portfolioPage/index.html
+++ b/projects/pages/portfolioPage/index.html
@@ -36,11 +36,11 @@
       </section>
 
       <section class="page2">
-        <h1 class="header">Horse yard</h1>
+        <h1 class="header">Munday Hills</h1>
         <img
           class="image resizable-image"
-          src="./assets/images/horseyard.jpg"
-          alt="horse yard"
+          src="./assets/images/fullsize/mundayhills.jpg"
+          alt="evening landscape with town in the distance"
         />
       </section>
 
