--- a/about/index.html
+++ b/about/index.html
@@ -4,37 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="../icon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="icon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="../main.css" />
-    <title>Fin Harris | About</title>
+    <link rel="stylesheet" href="../universalStyles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Fin Harris</title>
   </head>
   <body>
-    <header class="sticky-header">
-      <h2 class="title">Fin's Epic Website</h2>
-      <i class="fa fa-bars hamburger-icon"></i>
+    <!-- <i class="fa fa-bars hamburger-icon"></i>
+    <i class="fa fa-close close-icon"></i> -->
+    <header>
+      <img src="../assets/images/logo.png" alt="logo" class="logo" />
       <nav>
-        <div class="close-icon-wrapper">
-          <i class="fa fa-close close-icon"></i>
-        </div>
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a href="../">home</a>
-          </li>
-          <li class="nav-item">
-            <a href="../projects/">projects</a>
-          </li>
-          <li class="nav-item">
-            <a href="#">about</a>
-          </li>
+        <ul>
+          <li><a href="../">Home</a></li>
+          <li><a href="../projects/">Projects</a></li>
+          <li><a href="./">About</a></li>
         </ul>
       </nav>
     </header>
-
-    <script src="../app.js"></script>
+    <main>
+      <section>
+        <h3>This page is about me.</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium
+          ab similique voluptate, modi in ullam suscipit error sint totam
+          molestiae!
+        </p>
+      </section>
+    </main>
+    <script src="app.js"></script>
   </body>
 </html>
