--- a/index.html
+++ b/index.html
@@ -9,59 +9,33 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./universalStyles/style.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <title>Fin Harris</title>
   </head>
   <body>
-    <header class="sticky-header">
-      <h2 class="title">Fin's Epic Website</h2>
-      <i class="fa fa-bars hamburger-icon"></i>
+    <!-- <i class="fa fa-bars hamburger-icon"></i>
+    <i class="fa fa-close close-icon"></i> -->
+    <header>
+      <img src="./assets/images/logo.png" alt="logo" class="logo" />
       <nav>
-        <div class="close-icon-wrapper">
-          <i class="fa fa-close close-icon"></i>
-        </div>
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a href="#">home</a>
-          </li>
-          <li class="nav-item">
-            <a href="./projects">projects</a>
-          </li>
-          <li class="nav-item">
-            <a href="./about/">about</a>
-          </li>
+        <ul>
+          <li><a href="./">Home</a></li>
+          <li><a href="./projects/">Projects</a></li>
+          <li><a href="./about/">About</a></li>
         </ul>
       </nav>
     </header>
-    <section class="landing">
-      <div class="top">
-        <h1 class="landing-header">YOU'VE LANDED!</h1>
-      </div>
-
-      <div class="bottom">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-          <path
-            fill="#0099ff"
-            class="waves"
-            fill-opacity="1"
-            d="M0,192L48,165.3C96,139,192,85,288,69.3C384,53,480,75,576,122.7C672,171,768,245,864,256C960,267,1056,213,1152,176C1248,139,1344,117,1392,106.7L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"
-          ></path>
-        </svg>
-        <div class="bottom-flex-wrapper">
-          <section class="content">
-            <h2>Welcome to my personal page.</h2>
-            <p class="greeting">
-              Here you can test and use all my web based projects, and find
-              links to others.
-            </p>
-          </section>
-          <button class="projects-call-to-action">
-            <a href="./projects/">Projects</a>
-          </button>
-        </div>
-      </div>
-    </section>
+    <main>
+      <section>
+        <h3>Welcome to my personal page.</h3>
+        <p>
+          Here you can test and use all my web based projects, and find links to
+          others.
+        </p>
+        <a href="./projects/"><button>Projects</button></a>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
