--- a/projects/index.html
+++ b/projects/index.html
@@ -4,63 +4,58 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="../icon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="icon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="../main.css" />
-    <title>Fin Harris | Projects</title>
+    <link rel="stylesheet" href="../universalStyles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Fin Harris</title>
   </head>
   <body>
-    <header class="sticky-header">
-      <h2 class="title">Fin's Epic Website</h2>
-      <i class="fa fa-bars hamburger-icon"></i>
+    <!-- <i class="fa fa-bars hamburger-icon"></i>
+    <i class="fa fa-close close-icon"></i> -->
+    <header>
+      <img src="../assets/images/logo.png" alt="logo" class="logo" />
       <nav>
-        <div class="close-icon-wrapper">
-          <i class="fa fa-close close-icon"></i>
-        </div>
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a href="../">home</a>
-          </li>
-          <li class="nav-item">
-            <a href="#">projects</a>
-          </li>
-          <li class="nav-item">
-            <a href="../about/">about</a>
-          </li>
+        <ul>
+          <li><a href="../">Home</a></li>
+          <li><a href="./">Projects</a></li>
+          <li><a href="../about/">About</a></li>
         </ul>
       </nav>
     </header>
-
-    <section class="content">
-      <h1 class="header">my projects</h1>
-
-      <ul>
-        <li><a target="_blank" href="./pages/changeChars/">change chars</a></li>
-        <li>
-          <a target="_blank" href="./pages/higherOrLower/">higher or lower</a>
-        </li>
-        <li>
-          <a target="_blank" href="./pages/searchEngine/">search engine</a>
-        </li>
-        <li><a target="_blank" href="./pages/youAreAdj/">you are...</a></li>
-        <li><a target="_blank" href="./pages/discordBot/">discord bot</a></li>
-        <li>
-          <a target="_blank" href="./pages/wipLandingPage/"
-            >WIP 3D landing page demo</a
-          >
-        </li>
-        <li>
-          <a target="_blank" href="./pages/portfolioPage/"
-            >photography portfolio</a
-          >
-        </li>
-      </ul>
-    </section>
-
-    <script src="../app.js"></script>
+    <main>
+      <section>
+        <h3>Here is a list of my current projects.</h3>
+        <ul>
+          <li>
+            <a href="./pages/changeChars/" target="_blank">Change Characters</a>
+          </li>
+          <li><a href="./pages/discordBot/" target="_blank">Discord Bot</a></li>
+          <li>
+            <a href="./pages/higherOrLower/" target="_blank"
+              >Higher or Lower Game</a
+            >
+          </li>
+          <li>
+            <a href="./pages/portfolioPage/" target="_blank"
+              >Photography Portfolio</a
+            >
+          </li>
+          <li>
+            <a href="./pages/searchEngine/" target="_blank">Search Engine</a>
+          </li>
+          <li>
+            <a href="./pages/wipLandingPage/" target="_blank"
+              >WIP Landing Page</a
+            >
+          </li>
+          <li><a href="./pages/youAreAdj/" target="_blank">You Are...</a></li>
+        </ul>
+      </section>
+    </main>
+    <script src="app.js"></script>
   </body>
 </html>
