QOL changes to search enging

--- a/projects/pages/searchEngine/index.html
+++ b/projects/pages/searchEngine/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Database Search</title>
+    <title>Search Engine and Tools</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script
       src="https://kit.fontawesome.com/4628efcb2d.js"
@@ -14,7 +14,7 @@
   <body>
     <div class="dropdown">
       <button class="dropbtn">
-        Dropdown
+        Tools
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content hidden">
