changed titles of pages

--- a/projects/index.html
+++ b/projects/index.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="../universalStyles/style.css" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>Fin Harris</title>
+    <title>Fin Harris | Projects</title>
   </head>
   <body>
     <!-- <i class="fa fa-bars hamburger-icon"></i>
