added more photos to photography portfolio

--- a/projects/pages/portfolioPage/index.html
+++ b/projects/pages/portfolioPage/index.html
@@ -35,15 +35,6 @@
         </div>
       </section>
 
-      <section class="page2">
-        <h1 class="header">Munday Hills</h1>
-        <img
-          class="image resizable-image"
-          src="./assets/images/mundayhills.jpg"
-          alt="evening landscape with town in the distance"
-        />
-      </section>
-
       <section class="page3">
         <h1 class="header">Munday Evening</h1>
         <img
@@ -68,6 +59,60 @@
           class="image resizable-image"
           src="./assets/images/glowinghorizon.jpg"
           alt="night time landscape with town in distance"
+        />
+      </section>
+
+      <section class="page5">
+        <h1 class="header">Backlit Decay</h1>
+        <img
+          class="image resizable-image"
+          src="./assets/images/backlit decay.jpg"
+          alt="sunset shot of the brighton west pier"
+        />
+      </section>
+
+      <section class="page5">
+        <h1 class="header">Dusk Destruction</h1>
+        <img
+          class="image resizable-image"
+          src="./assets/images/dusk destruction.jpg"
+          alt="the west brighton pier on a dusk sky"
+        />
+      </section>
+
+      <section class="page5">
+        <h1 class="header">Solo Bird</h1>
+        <img
+          class="image resizable-image"
+          src="./assets/images/solo bird.jpg"
+          alt="a singular bird on the water"
+        />
+      </section>
+
+      <section class="page5">
+        <h1 class="header">The Painter</h1>
+        <img
+          class="image resizable-image"
+          src="./assets/images/the painter.jpg"
+          alt="a painter up a ladder"
+        />
+      </section>
+
+      <section class="page5">
+        <h1 class="header">The Postman</h1>
+        <img
+          class="image resizable-image"
+          src="./assets/images/the postman.jpg"
+          alt="a postman walking along the road with harsh shadows"
+        />
+      </section>
+
+      <section class="page5">
+        <h1 class="header">Lunar</h1>
+        <img
+          class="image resizable-image"
+          src="./assets/images/lunar.jpg"
+          alt="the moon on a dark black sky"
         />
       </section>
 
