fixed not finding shortest path

--- a/AStar/index.html
+++ b/AStar/index.html
@@ -10,19 +10,28 @@
   <body>
     <header>
       <button class="startButton">START</button>
+
       <div class="speed">
         <label for="speed">Speed (ms):</label>
         <input type="number" class="inputSpeed" name="speed" />
       </div>
+
       <div class="startPoint">
         <label for="startPoint">Start Point ('x,y'):</label>
         <input type="text" name="startPoint" class="startInput" />
       </div>
+
       <div class="endPoint">
         <label for="endPoint">End Point ('x,y'):</label>
         <input type="text" name="endPoint" class="endInput" />
       </div>
+
       <button class="clearButton">CLEAR/UPDATE</button>
+
+      <div class="showFValue">
+        <label for="showFValueInput">Show F Value:</label>
+        <input type="checkbox" name="showFValueInput" class="showFValueInput" />
+      </div>
     </header>
     <div class="container"></div>
 
