can change cols/rows in code

--- a/AStar/index.html
+++ b/AStar/index.html
@@ -25,7 +25,17 @@
         <label for="endPoint">End Point ('x,y'):</label>
         <input type="text" name="endPoint" class="endInput" />
       </div>
-      
+
+      <!-- <div class="cols">
+        <label for="cols">NO. Cols:</label>
+        <input type="number" name="cols" class="colsInput" />
+      </div>
+
+      <div class="rows">
+        <label for="rows">NO. Rows:</label>
+        <input type="number" name="rows" class="rowsInput" />
+      </div> -->
+
       <div class="showFValue">
         <label for="showFValueInput">Show F Value:</label>
         <input type="checkbox" name="showFValueInput" class="showFValueInput" />
