--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="icon.ico" type="image/x-icon" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    /> -->
     <link
       href="https://db.onlinewebfonts.com/c/721c73bcd2e49f3a621991089838b503?family=Euclid+Circular+B+Medium"
       rel="stylesheet"
@@ -19,8 +19,6 @@
     <title>Fin Harris</title>
   </head>
   <body>
-    <!-- <i class="fa fa-bars hamburger-icon"></i>
-    <i class="fa fa-close close-icon"></i> -->
     <header>
       <img src="./assets/images/logo.png" alt="logo" class="logo" />
       <nav>
