fixed extremely long loading times and icons not populating

--- a/projects/pages/portfolioPage/index.html
+++ b/projects/pages/portfolioPage/index.html
@@ -7,18 +7,18 @@
     <title>Fin Harris | Portfolio</title>
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
-    <link
+    <!-- <link
       href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css"
       rel="stylesheet"
-    />
+    /> -->
 
     <link rel="stylesheet" href="./stylesindex/styles.css" />
   </head>
   <body>
     <header class="header-sect">
-      <i class="open ion-md-menu"></i>
+      <div class="open"></div>
       <nav class="ham-menu">
-        <i class="close ion-md-close"></i>
+        <div class="close"></div>
 
         <ul>
           <li><a href="./">portfolio</a></li>
