--- a/projects/pages/portfolioPage/about/index.html
+++ b/projects/pages/portfolioPage/about/index.html
@@ -11,18 +11,18 @@
       href="../assets/favicon.ico"
       type="image/x-icon"
     />
-    <link
+    <!-- <link
       href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css"
       rel="stylesheet"
-    />
+    /> -->
 
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <header class="header-sect">
-      <i class="open ion-md-menu"></i>
+      <div class="open"></div>
       <nav class="ham-menu">
-        <i class="close ion-md-close"></i>
+        <div class="close"></div>
 
         <ul>
           <li><a href="../">portfolio</a></li>
