--- a/projects/pages/portfolioPage/contact/index.html
+++ b/projects/pages/portfolioPage/contact/index.html
@@ -11,16 +11,12 @@
       href="../assets/favicon.ico"
       type="image/x-icon"
     />
-    <link
-      href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <header class="header-sect">
-      <i class="open ion-md-menu"></i>
+      <div class="open"></div>
       <nav class="ham-menu">
-        <i class="close ion-md-close"></i>
+        <div class="close"></div>
 
         <ul>
           <li><a href="../">portfolio</a></li>
