changed wording on project page

--- a/projects/index.html
+++ b/projects/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
       <section>
-        <h3>Here is a list of my current projects.</h3>
+        <h3>Here is a list of my projects.</h3>
         <ul>
           <li>
             <a href="./pages/changeChars/" target="_blank">Change Characters</a>
