added more sites to projects list

--- a/projects/index.html
+++ b/projects/index.html
@@ -42,11 +42,6 @@
             >
           </li>
           <li>
-            <a href="./pages/portfolioPage/" target="_blank"
-              >Photography Portfolio</a
-            >
-          </li>
-          <li>
             <a href="./pages/searchEngine/" target="_blank">Search Engine</a>
           </li>
           <li>
@@ -55,6 +50,16 @@
             >
           </li>
           <li><a href="./pages/youAreAdj/" target="_blank">You Are...</a></li>
+          <li>
+            <a href="./pages/bgColourChanger/" target="_blank"
+              >Random background color changer</a
+            >
+          </li>
+          <li>
+            <a href="./pages/ScrollProgress/" target="_blank"
+              >Scroll progress bar</a
+            >
+          </li>
         </ul>
       </section>
     </main>
