--- a/index.html
+++ b/index.html
@@ -10,16 +10,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     /> -->
     <link
-      href="main.css"
-      rel="preload"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
+      href="https://db.onlinewebfonts.com/c/721c73bcd2e49f3a621991089838b503?family=Euclid+Circular+B+Medium"
+      rel="stylesheet"
+      type="text/css"
     />
-    <noscript
-      ><link
-        rel="stylesheet"
-        href="https://db.onlinewebfonts.com/c/721c73bcd2e49f3a621991089838b503?family=Euclid+Circular+B+Medium"
-    /></noscript>
     <link rel="stylesheet" href="./universalStyles/style.css" />
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>Fin Harris</title>
