removed titles from photos and added costal turbine image

--- a/photography/index.html
+++ b/photography/index.html
@@ -35,8 +35,7 @@
         </div>
       </section>
 
-      <section class="page3">
-        <h1 class="header">Munday Evening</h1>
+      <section class="page2">
         <img
           class="image resizable-image"
           src="./assets/images/mundayevening.jpg"
@@ -44,17 +43,7 @@
         />
       </section>
 
-      <section class="page4">
-        <h1 class="header">The house</h1>
-        <img
-          class="image resizable-image"
-          src="./assets/images/scotlandmansion.jpg"
-          alt="large house"
-        />
-      </section>
-
-      <section class="page5">
-        <h1 class="header">Glowing Horizon</h1>
+      <section class="page3">
         <img
           class="image resizable-image"
           src="./assets/images/glowinghorizon.jpg"
@@ -62,17 +51,23 @@
         />
       </section>
 
-      <section class="page5">
-        <h1 class="header">Backlit Decay</h1>
+      <!-- <section class="page4">
         <img
           class="image resizable-image"
           src="./assets/images/backlit decay.jpg"
           alt="sunset shot of the brighton west pier"
         />
+      </section> -->
+
+      <section class="page4">
+        <img
+          class="image resizable-image"
+          src="./assets/images/costal turbine.jpeg"
+          alt="photo of a wind turbine on the coast through a plane window"
+        />
       </section>
 
       <section class="page5">
-        <h1 class="header">Dusk Destruction</h1>
         <img
           class="image resizable-image"
           src="./assets/images/dusk destruction.jpg"
@@ -80,8 +75,7 @@
         />
       </section>
 
-      <section class="page5">
-        <h1 class="header">Solo Bird</h1>
+      <section class="page6">
         <img
           class="image resizable-image"
           src="./assets/images/solo bird.jpg"
@@ -89,8 +83,7 @@
         />
       </section>
 
-      <section class="page5">
-        <h1 class="header">The Painter</h1>
+      <section class="page7">
         <img
           class="image resizable-image"
           src="./assets/images/the painter.jpg"
@@ -98,8 +91,7 @@
         />
       </section>
 
-      <section class="page5">
-        <h1 class="header">The Postman</h1>
+      <section class="page8">
         <img
           class="image resizable-image"
           src="./assets/images/the postman.jpg"
@@ -107,8 +99,7 @@
         />
       </section>
 
-      <section class="page5">
-        <h1 class="header">Lunar</h1>
+      <section class="page9">
         <img
           class="image resizable-image"
           src="./assets/images/lunar.jpg"
