made website mobike friendly

--- a/index.html
+++ b/index.html
@@ -27,17 +27,15 @@
         <line x1="4" y1="12" x2="20" y2="12"></line>
         <line x1="4" y1="18" x2="20" y2="18"></line>
       </svg>
+      <h4 class="name-title t2"><strong>Fin</strong>Harris</h4>
       <nav>
-        <!-- <div class="color-bar"></div> -->
-        <div class="nav-content">
-          <h4><strong>Fin</strong>Harris</h4>
-          <ul class="nav-list">
-            <li class="nav-item"><a href="#projects">Projects</a></li>
-            <li class="nav-item"><a href="#about">About</a></li>
-            <li class="nav-item"><a href="#contact">Contact</a></li>
-            <li class="btt nav-item"><a href="#header">back to top</a></li>
-          </ul>
-        </div>
+        <h4 class="name-title t1"><strong>Fin</strong>Harris</h4>
+        <ul class="nav-list">
+          <li class="nav-item"><a href="#projects">Projects</a></li>
+          <li class="nav-item"><a href="#about">About</a></li>
+          <li class="nav-item"><a href="#contact">Contact</a></li>
+          <li class="btt nav-item"><a href="#header">back to top</a></li>
+        </ul>
       </nav>
 
       <div class="hero">
@@ -123,6 +121,22 @@
           A simple site mainly to test the use of three.js to render 3d objects
           realtime in the browser. The scene camera physically moves when the
           page is scrolled and the objects are animated to rotate.
+        </p>
+      </section>
+
+      <section class="project-card">
+        <h3 class="project-card-title">
+          <a href="projects/pages/skeuomorphicBox/" target="_blank"
+            >Skeuomorphic Box</a
+          >
+        </h3>
+        <img
+          src="./assets/images/project-screenshots/skeuomorphic-box.png"
+          alt="#"
+          class="project-card-image"
+        />
+        <p class="project-card-description">
+          Just a page to chill out and click a box.
         </p>
       </section>
     </section>
