--- a/index.html
+++ b/index.html
@@ -139,6 +139,39 @@
           Just a page to chill out and click a box.
         </p>
       </section>
+
+      <section class="project-card">
+        <h3 class="project-card-title">
+          <a href="./todo/" target="_blank">Todo List App</a>
+        </h3>
+        <img
+          src="./assets/images/project-screenshots/todo-app.png"
+          alt="#"
+          class="project-card-image"
+        />
+        <p class="project-card-description">
+          This is a todo list app I created using react.js. It stores your todos
+          in local storage so that if you refresh the page or delete the tab and
+          come back later your todos will be saved. It also will swap to dark
+          mode if the system setting prefers that.
+        </p>
+      </section>
+
+      <section class="project-card">
+        <h3 class="project-card-title">
+          <a href="./photography/" target="_blank">Photography Portfolio</a>
+        </h3>
+        <img
+          src="./assets/images/project-screenshots/photography-page.png"
+          alt="#"
+          class="project-card-image"
+        />
+        <p class="project-card-description">
+          This is my photography portfolio. Created in vanilla html, css and js
+          from scratch by me. It features a snapping design that centers the
+          view on each image.
+        </p>
+      </section>
     </section>
 
     <section class="about" id="about">
