--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
               <circle cx="12" cy="11" r="3"></circle>
               <path
-                d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"
+              d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"
               ></path>
             </svg>
             <h2>South East, England</h2>
@@ -72,6 +72,20 @@
     </header>
 
     <section class="projects" id="projects">
+      <section class="project-card">
+        <h3 class="project-card-title">
+          <a href="./photography/" target="_blank">Photography Portfolio</a>
+        </h3>
+        <img
+          src="./assets/images/project-screenshots/photography-page.png"
+          alt="#"
+          class="project-card-image"
+        />
+        <p class="project-card-description">
+          This is my photography portfolio, the page is made from scratch and the photos are all mine.
+        </p>
+      </section>
+      
       <section class="project-card">
         <h3 class="project-card-title">
           <a href="projects/pages/higherOrLower/" target="_blank"
@@ -84,17 +98,14 @@
           class="project-card-image"
         />
         <p class="project-card-description">
-          This is a simple number based higher or lower game. It asks the user
-          to select the range to play in and allows the user to guess if the
-          next randomly generated number will be higher or lower than the one
-          currently displayed.
+          This is a simple number based higher or lower game.
         </p>
       </section>
 
       <section class="project-card">
         <h3 class="project-card-title">
           <a href="projects/pages/searchEngine/" target="_blank"
-            >Search Engine Front-End</a
+            >Search Engine</a
           >
         </h3>
         <img
@@ -104,10 +115,7 @@
         />
         <p class="project-card-description">
           This is a front-end experiment to make a more functional search engine
-          front end. It allows the user to type into the box without having the
-          text box selected, press enter to search and clear the search box to
-          allow the next search to happen sooner. It also has a couple useful
-          tools.
+          front end.
         </p>
       </section>
 
@@ -123,9 +131,7 @@
           class="project-card-image"
         />
         <p class="project-card-description">
-          A simple site mainly to test the use of three.js to render 3d objects
-          realtime in the browser. The scene camera physically moves when the
-          page is scrolled and the objects are animated to rotate.
+          A site with a 3d rendered background.
         </p>
       </section>
 
@@ -155,28 +161,10 @@
           class="project-card-image"
         />
         <p class="project-card-description">
-          This is a todo list app I created using react.js. It stores your todos
-          in local storage so that if you refresh the page or delete the tab and
-          come back later your todos will be saved. It also will swap to dark
-          mode if the system setting prefers that.
+          A functional To-Do app made with react.js.
         </p>
       </section>
 
-      <section class="project-card">
-        <h3 class="project-card-title">
-          <a href="./photography/" target="_blank">Photography Portfolio</a>
-        </h3>
-        <img
-          src="./assets/images/project-screenshots/photography-page.png"
-          alt="#"
-          class="project-card-image"
-        />
-        <p class="project-card-description">
-          This is my photography portfolio. Created in vanilla html, css and js
-          from scratch by me. It features a snapping design that centers the
-          view on each image.
-        </p>
-      </section>
     </section>
 
     <section class="about" id="about">
@@ -184,14 +172,15 @@
       <div class="about-words">
         <h1 class="about-title">About Me</h1>
         <p class="about-paragraph">
-          I am a programmer,
+          <!-- I am a programmer,
           <a href="./photography/" target="_blank">photographer</a> and website
           designer from the south east of England. I am passionate about all I
           do and especially learning new ways of making websites, software,
           games and pictures. I always look to take my knowledge and
           understanding to the next level using any resources I can access -
           whether that be: YouTube; the internet in general ;or other people I
-          can talk to.
+          can talk to. -->
+          Sint voluptate esse irure incididunt. Ex dolore fugiat duis do consequat est. Adipisicing et dolore quis minim enim id in dolor eu velit cupidatat exercitation irure. Enim nisi enim elit voluptate tempor. Cupidatat occaecat sunt elit laborum. Ut culpa eu sint sit qui occaecat. Ut consequat est anim ullamco deserunt reprehenderit ut anim.
         </p>
       </div>
     </section>
