--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <section class="contact" id="contact">
       <h1 class="contact-title">Contact Me</h1>
       <form
-        action="https://formsubmit.co/56654b8f2cbecfceb4d0f8ab62c553e3"
+        action="https://formsubmit.co/finlaycharris@gmail.com"
         method="POST"
         class="contact-form"
       >
