--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <section class="contact" id="contact">
       <h1 class="contact-title">Contact Me</h1>
       <form
-        action="https://formsubmit.co/finlaycharris@gmail.com"
+        action="https://formsubmit.co/9a8c719f0a3594847970493fd7856eac"
         method="POST"
         class="contact-form"
       >
