added background progress to progress percentage

--- a/projects/pages/ftxPackingList/index.html
+++ b/projects/pages/ftxPackingList/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <h1>FTX Packing List</h1>
-    <div class="progress" id="progressTracker">0% complete</div>
+    <div class="progress" id="progressTracker">
+      <p class="progressTrackerText" id="progressTrackerText">0% complete</p>
+    </div>
     <div id="checklistContainer"></div>
     <button onclick="clearAll()">Uncheck Everything</button>
   </body>
