Added dev page login

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
               <circle cx="12" cy="11" r="3"></circle>
               <path
-              d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"
+                d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"
               ></path>
             </svg>
             <h2>South East, England</h2>
@@ -82,10 +82,11 @@
           class="project-card-image"
         />
         <p class="project-card-description">
-          This is my photography portfolio, the page is made from scratch and the photos are all mine.
+          This is my photography portfolio, the page is made from scratch and
+          the photos are all mine.
         </p>
       </section>
-      
+
       <section class="project-card">
         <h3 class="project-card-title">
           <a href="projects/pages/higherOrLower/" target="_blank"
@@ -164,7 +165,6 @@
           A functional To-Do app made with react.js.
         </p>
       </section>
-
     </section>
 
     <section class="about" id="about">
@@ -180,7 +180,12 @@
           understanding to the next level using any resources I can access -
           whether that be: YouTube; the internet in general ;or other people I
           can talk to. -->
-          Sint voluptate esse irure incididunt. Ex dolore fugiat duis do consequat est. Adipisicing et dolore quis minim enim id in dolor eu velit cupidatat exercitation irure. Enim nisi enim elit voluptate tempor. Cupidatat occaecat sunt elit laborum. Ut culpa eu sint sit qui occaecat. Ut consequat est anim ullamco deserunt reprehenderit ut anim.
+          Sint voluptate esse irure incididunt. Ex dolore fugiat duis do
+          consequat est. Adipisicing et dolore quis minim enim id in dolor eu
+          velit cupidatat exercitation irure. Enim nisi enim elit voluptate
+          tempor. Cupidatat occaecat sunt elit laborum. Ut culpa eu sint sit qui
+          occaecat. Ut consequat est anim ullamco deserunt reprehenderit ut
+          anim.
         </p>
       </div>
     </section>
@@ -241,7 +246,24 @@
       </form>
     </section>
 
+    <div class="dev-page-login" id="dev-page-login">
+      <form action="" class="dev-page-form">
+        <h1 id="dev-page-title">Dev Page Login</h1>
+        <label for="password" class="dev-page-password-label">Password</label>
+        <input type="password" name="password" id="dev-page-password" />
+        <span>
+          <input type="button" value="Submit" id="dev-page-submit" />
+          <input type="button" value="Cancel" id="dev-page-cancel" />
+        </span>
+      </form>
+    </div>
+
+    <footer>
+      <a id="dev-page-button">dev page</a>
+    </footer>
+
     <script src="./scripts/headerScroll.js"></script>
     <script src="./scripts/hamburgerMenu.js"></script>
+    <script src="./scripts/devPage.js"></script>
   </body>
 </html>
