Added image enlarging reminder/tip to photography page

--- a/photography/contact/index.html
+++ b/photography/contact/index.html
@@ -11,6 +11,7 @@
       href="../assets/favicon.ico"
       type="image/x-icon"
     />
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <header class="header-sect">
@@ -25,6 +26,7 @@
         </ul>
       </nav>
     </header>
+    <h4>Currently WIP. <a href="../">head back 👈</a></h4>
   </body>
 
   <script src="../app.js"></script>
