--- a/photography/index.html
+++ b/photography/index.html
@@ -27,6 +27,10 @@
         </ul>
       </nav>
     </header>
+    <div class="enlarge-popup enlarge-popup-invisible" id="enlarge-popup">
+      <div class="enlarge-popup-close" id="enlarge-popup-close">&times;</div>
+      <h3>You can enlarge images by clicking on them!</h3>
+    </div>
     <div class="container">
       <section class="page1">
         <div class="name-plate">
@@ -51,13 +55,13 @@
         />
       </section>
 
-      <!-- <section class="page4">
+      <section class="page4">
         <img
           class="image resizable-image"
           src="./assets/images/backlit decay.jpg"
           alt="sunset shot of the brighton west pier"
         />
-      </section> -->
+      </section>
 
       <section class="page4">
         <img
